--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -363,6 +363,32 @@
   <string name="CreateProfileActivity_set_up_your_profile">Nastavit váš profil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Váš profil je end-to-end šifrován. Váš profil a změny na něm budou viditelné pro vaše kontakty, když zahájíte nebo přijmete novou konverzaci a když se připojíte k novým skupinám.</string>
   <string name="CreateProfileActivity_set_avatar_description">Nastavit avatar</string>
+  <!--ChooseBackupFragment-->
+  <string name="ChooseBackupFragment__restore_from_backup">Obnovit ze zálohy?</string>
+  <string name="ChooseBackupFragment__restore_your_messages_and_media">Obnovte vaše zprávy a média z lokální zálohy. Pokud je neobnovíte teď, později to už nebude možné.</string>
+  <string name="ChooseBackupFragment__icon_content_description">Ikona obnovení ze zálohy</string>
+  <string name="ChooseBackupFragment__choose_backup">Vyberte zálohu</string>
+  <string name="ChooseBackupFragment__learn_more">Zjistit více</string>
+  <!--RestoreBackupFragment-->
+  <string name="RestoreBackupFragment__restore_complete">Obnova dokončena</string>
+  <string name="RestoreBackupFragment__to_continue_using_backups_please_choose_a_folder">Vyberte složku, abyste mohli nadále využívat zálohy. Nové zálohy budou uloženy v tomto umístění.</string>
+  <string name="RestoreBackupFragment__choose_folder">Vybrat složku</string>
+  <string name="RestoreBackupFragment__not_now">Teď ne</string>
+  <!--BackupsPreferenceFragment-->
+  <string name="BackupsPreferenceFragment__chat_backups">Zálohy konverzace</string>
+  <string name="BackupsPreferenceFragment__backups_are_encrypted_with_a_passphrase">Zálohy jsou zašifrované heslem a uložené ve vašem zařízení.</string>
+  <string name="BackupsPreferenceFragment__create_backup">Vytvořit zálohu</string>
+  <string name="BackupsPreferenceFragment__last_backup">Poslední záloha: %1$s</string>
+  <string name="BackupsPreferenceFragment__backup_folder">Složka pro zálohy</string>
+  <string name="BackupsPreferenceFragment__verify_backup_passphrase">Ověřit přístupovou frázi pro zálohu</string>
+  <string name="BackupsPreferenceFragment__test_your_backup_passphrase">Otestujte přístupovou frázi pro vaši zálohu a ověřte, že se shoduje</string>
+  <string name="BackupsPreferenceFragment__turn_on">Zapnout</string>
+  <string name="BackupsPreferenceFragment__turn_off">Vypnout</string>
+  <string name="BackupsPreferenceFragment__to_restore_a_backup">Pro obnovení ze zálohy nainstalujte novou kopii Signalu. Spusťte aplikaci a klepněte na \"Obnovení ze zálohy, pak najděte soubor se zálohou. %1$s</string>
+  <string name="BackupsPreferenceFragment__learn_more">Zjistit více</string>
+  <string name="BackupsPreferenceFragment__in_progress">Probíhá…</string>
+  <string name="BackupsPreferenceFragment__d_so_far">%1$d dosud…</string>
+  <string name="BackupsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal potřebuje oprávnění pro přístup k úložišti, aby mohl vytvářet zálohy, ale toto oprávnění je nyní trvale zakázáno. Prosím pokračujte do menu nastavení aplikací, vyberte \"Oprávnění\" a povolte \"Úložiště\".</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Používá se vlastní: %s</string>
   <string name="CustomDefaultPreference_using_default">Používá se výchozí: %s</string>
@@ -404,6 +430,14 @@
   <!--ExpiredBuildReminder-->
   <string name="ExpiredBuildReminder_this_version_of_signal_has_expired">Tato verze Signalu je zastaralá. Proveďte aktualizaci, abyste mohli odesílat a přijímat zprávy.</string>
   <string name="ExpiredBuildReminder_update_now">Aktualizovat nyní</string>
+  <!--PendingGroupJoinRequestsReminder-->
+  <plurals name="PendingGroupJoinRequestsReminder_d_pending_member_requests">
+    <item quantity="one">%d nevyřízená žádost o členství.</item>
+    <item quantity="few">%d nevyřízené žádosti o členství.</item>
+    <item quantity="many">%d nevyřízených žádostí o členství.</item>
+    <item quantity="other">%d nevyřízených žádostí o členství.</item>
+  </plurals>
+  <string name="PendingGroupJoinRequestsReminder_view">Zobrazit</string>
   <!--ShareActivity-->
   <string name="ShareActivity_share_with">Sdílet s</string>
   <string name="ShareActivity_multiple_attachments_are_only_supported">Vícero příloh je podporováno pouze pro obrázky a videa</string>
@@ -839,13 +873,11 @@
   <string name="MessageRecord_left_group">Opustili jste skupinu</string>
   <string name="MessageRecord_you_updated_group">Upravili jste skupinu.</string>
   <string name="MessageRecord_the_group_was_updated">Skupina byla aktualizována.</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_you_called">Vy jste volal</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_called_you">Volal vám kontakt</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call">Zmeškaný hovor</string> -->
+  <string name="MessageRecord_you_called_date">Volali jste · %1$s</string>
+  <string name="MessageRecord_missed_call_date">Zmeškaný hovor · %1$s</string>
   <string name="MessageRecord_s_updated_group">%s upravil(a) skupinu.</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_s_called_you">%s vám volal</string> -->
+  <string name="MessageRecord_s_called_you_date">%1$s vám volal(a) · %2$s</string>
   <string name="MessageRecord_called_s">Volán %s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_from">Zmeškaný hovor od %s</string> -->
   <string name="MessageRecord_s_joined_signal">%s má Signal!</string>
   <string name="MessageRecord_you_disabled_disappearing_messages">Zakázali jste zmizení zpráv.</string>
   <string name="MessageRecord_s_disabled_disappearing_messages">%1$szakázal(a) zmizení zpráv.</string>
@@ -990,11 +1022,14 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">Označili jste na jiném zařízení vaše bezpečnostní kódy pro komunikaci s %s jako neověřené.</string>
   <!--MessageRequestBottomView-->
   <string name="MessageRequestBottomView_accept">Přijmout</string>
+  <string name="MessageRequestBottomView_continue">Pokračovat</string>
   <string name="MessageRequestBottomView_delete">Smazat</string>
   <string name="MessageRequestBottomView_block">Blokovat</string>
   <string name="MessageRequestBottomView_unblock">Odblokovat</string>
   <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_they_wont_know_youve_seen_their_messages_until_you_accept">Dovolit %1$s zasílat vám zprávy a sdílet vaše jméno a fotografii? Nebudou vědět, že jste viděl jejich zprávy, dokud je nepřijmete.</string>
   <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_wont_receive_any_messages_until_you_unblock_them">Dovolit %1$s zasílat vám zprávy a sdílet vaše jméno a fotografii? Dokud je neodblokujete, tak žádné zprávy neobdržíte.</string>
+  <string name="MessageRequestBottomView_continue_your_conversation_with_this_group_and_share_your_name_and_photo">Pokračovat ve vaší konverzaci s touto skupinou a sdílet vaše jméno a fotografii s jejími členy?</string>
+  <string name="MessageRequestBottomView_continue_your_conversation_with_s_and_share_your_name_and_photo">Pokračovat ve vaší konverzaci s %1$s a sdílet s nimi vaše jméno a fotografii?</string>
   <string name="MessageRequestBottomView_do_you_want_to_join_this_group_they_wont_know_youve_seen_their_messages_until_you_accept">Připojit se k této skupině a sdílet vaše jméno a fotografii s jejími členy? Nebudou vědět, že jste viděl jejich zprávy, dokud je nepřijmete.</string>
   <string name="MessageRequestBottomView_join_this_group_they_wont_know_youve_seen_their_messages_until_you_accept">Chcete se připojit k této skupině? Dokud tak neučiníte, členové se nedozví, že jste viděli jejich zprávy.</string>
   <string name="MessageRequestBottomView_unblock_this_group_and_share_your_name_and_photo_with_its_members">Odblokovat tuto skupinu a sdílet vaše jméno a fotografii s jejími členy? Dokud je neodblokujete, tak žádné zprávy neobdržíte.</string>
@@ -1171,6 +1206,7 @@ telefonní číslo
   <string name="RegistrationActivity_more_information">Více informací</string>
   <string name="RegistrationActivity_less_information">Méně informací</string>
   <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">Signal potřebuje přístup ke kontaktům a médiím, abyste se mohli spojit s vašimi přáteli, vyměňovat si zprávy a bezpečně telefonovat.</string>
+  <string name="RegistrationActivity_signal_needs_access_to_your_contacts_in_order_to_connect_with_friends">Signal potřebuje přístup k vašim kontaktům, aby bylo možné propojení s přáteli, vyměňování zpráv a uskutečňování zabezpečených hovorů. </string>
   <string name="RegistrationActivity_rate_limited_to_service">Učinili jste příliš mnoho pokusů zaregistrovat toto číslo. Zkuste to prosím znovu později.</string>
   <string name="RegistrationActivity_unable_to_connect_to_service">Nelze se připojit k službě. Prosím zkontrolujte připojení k internetu a poté to zkuste znovu.</string>
   <string name="RegistrationActivity_to_easily_verify_your_phone_number_signal_can_automatically_detect_your_verification_code">Po snadné ověření vašeho telefonního čísla může Signal automaticky zkontrolovat ověřovací kód, pokud mu povolíte přístup ke čtení SMS.</string>
@@ -1352,6 +1388,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Ve schránce nebyl nalezen žádný bezpečnostní kód pro porovnání.</string>
   <string name="VerifyIdentityActivity_signal_needs_the_camera_permission_in_order_to_scan_a_qr_code_but_it_has_been_permanently_denied">Signál potřebuje oprávnění pro přístup k fotoaparátu, aby mohl naskenovat QR kód, ale toto oprávnění je nyní zakázáno. Prosím pokračujte do menu nastavení aplikací, vyberte \"Oprávnění\" a povolte \"Fotoaparát\".</string>
   <string name="VerifyIdentityActivity_unable_to_scan_qr_code_without_camera_permission">Nelze naskenovat QR kód bez přístupu k fotoaparátu.</string>
+  <string name="VerifyIdentityActivity_you_must_first_exchange_messages_in_order_to_view">Musíte si nejprve vyměnit zprávy, abyste viděli bezpečnostní kód pro%1$s.</string>
   <!--ViewOnceMessageActivity-->
   <!--AudioView-->
   <!--MessageDisplayHelper-->
@@ -1424,6 +1461,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.
   <string name="NotificationChannel_other">Ostatní</string>
   <string name="NotificationChannel_group_messages">Zprávy</string>
   <string name="NotificationChannel_missing_display_name">Neznámý</string>
+  <string name="NotificationChannel_voice_notes">Hlasové poznámky</string>
   <!--ProfileEditNameFragment-->
   <string name="ProfileEditNameFragment_successfully_set_profile_name">Profilové jméno bylo úspěšně nastaveno.</string>
   <string name="ProfileEditNameFragment_encountered_a_network_error">Došlo k chybě v síti.</string>
@@ -1526,9 +1564,17 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">Nepodařilo se načíst kontakty, zkontrolujte připojení k síti.</string>
   <string name="ContactSelectionListFragment_username_not_found">Uživatelské jméno nebylo nalezeno</string>
   <string name="ContactSelectionListFragment_s_is_not_a_signal_user">\"%1$s\" není uživatel Signalu. Prosím zkontrolujte uživatelské jméno a zkuste to znovu.</string>
-  <!-- Removed by excludeNonTranslatables <string name="ContactSelectionListFragment_okay">V pořádku</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ContactSelectionListFragment_the_group_is_full">Skupina je plná</string> -->
   <string name="ContactSelectionListFragment_you_do_not_need_to_add_yourself_to_the_group">Nemusíte se přidávat do skupiny</string>
+  <string name="ContactSelectionListFragment_maximum_group_size_reached">Dosažena maximální velikost skupiny</string>
+  <string name="ContactSelectionListFragment_signal_groups_can_have_a_maximum_of_d_members">Skupiny Signalu mohou mít maximálně %1$d členů.</string>
+  <string name="ContactSelectionListFragment_recommended_member_limit_reached">Dosažen doporučený limit členů</string>
+  <string name="ContactSelectionListFragment_signal_groups_perform_best_with_d_members_or_fewer">Skupiny Signalu fungují nejlépe pro %1$d nebo méně členů. Přidání více členů povede k prodlevám při odesílání a přijímání zpráv.</string>
+  <plurals name="ContactSelectionListFragment_d_members">
+    <item quantity="one">%1$d člen</item>
+    <item quantity="few">%1$d členové</item>
+    <item quantity="many">%1$d členů</item>
+    <item quantity="other">%1$d členů</item>
+  </plurals>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">Žádné blokované kontakty</string>
   <!--contact_selection_list_fragment-->
@@ -2248,7 +2294,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.
   <string name="ResearchMegaphoneDialog_we_believe_in_privacy"><![CDATA[<p><b>Věříme v soukromí.</b></p><p>Signal vás nesleduje ani nesbírá vaše data. Abychom Signal vylepšili pro všechny, spoléháme na zpětnou vazbu uživatelů, <b>a rádi bychom ji od vás získali.</b></p><p>Pořádáme anketu, abychom porozuměli, jak Signal používáte. Naše anketa neshromažďuje žádná data, která by vás identifikovala. Pokud byste měli zájem sdílet další zpětnou vazbu, budete mít možnost poskytnout kontaktní informace.</p><p>Jestli máte pár minut a zpětnou vazbu, kterou můžete nabídnout, rádi ji od vás získáme.</p>]]></string>
   <string name="ResearchMegaphoneDialog_take_the_survey">Zúčastnit se ankety</string>
   <string name="ResearchMegaphoneDialog_no_thanks">Ne díky</string>
-  <!-- Removed by excludeNonTranslatables <string name="ResearchMegaphoneDialog_the_survey_is_hosted_by_surveygizmo_at_the_secure_domain">Anketu pořádá Surveygizmo na zabezpečené doméně surveys.signalusers.org</string> -->
+  <string name="ResearchMegaphoneDialog_the_survey_is_hosted_by_alchemer_at_the_secure_domain">Anketu hostuje Alchemer na zabezpečené doméně surveys.signalusers.org</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ikona přenosu</string>
   <string name="ConversationListFragment_loading">Načítání…</string>
@@ -2264,6 +2310,8 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.
   <string name="PushDecryptJob_unlock_to_view_pending_messages">Pro zobrazení čekajících zpráv odemkněte</string>
   <string name="enter_backup_passphrase_dialog__backup_passphrase">Heslo pro zálohy</string>
   <string name="backup_enable_dialog__backups_will_be_saved_to_external_storage_and_encrypted_with_the_passphrase_below_you_must_have_this_passphrase_in_order_to_restore_a_backup">Zálohy budou uloženy na externí úložiště a zašifrovány níže uvedeným heslem. Toto heslo musíte znát, abyste mohli zálohu obnovit.</string>
+  <string name="backup_enable_dialog__you_must_have_this_passphrase">Toto heslo musíte mít pro obnovu ze zálohy.</string>
+  <string name="backup_enable_dialog__folder">Složka</string>
   <string name="backup_enable_dialog__i_have_written_down_this_passphrase">Heslo jsem si zapsal. Bez něj nebudu schopen obnovit data ze zálohy.</string>
   <string name="registration_activity__restore_backup">Obnovit zálohu</string>
   <string name="registration_activity__skip">Přeskočit</string>
@@ -2289,6 +2337,8 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.
   <string name="BackupDialog_delete_backups">Smazat zálohy?</string>
   <string name="BackupDialog_disable_and_delete_all_local_backups">Zakázat a smazat všechny lokální zálohy?</string>
   <string name="BackupDialog_delete_backups_statement">Smazat zálohy</string>
+  <string name="BackupDialog_to_enable_backups_choose_a_folder">Pro povolení záloh vyberte složku. Zálohy budou uloženy do tohoto umístění.</string>
+  <string name="BackupDialog_choose_folder">Vybrat složku</string>
   <string name="BackupDialog_copied_to_clipboard">Zkopírováno do schránky</string>
   <string name="BackupDialog_enter_backup_passphrase_to_verify">Pro ověření zadejte přístupovou frázi pro vaši zálohu</string>
   <string name="BackupDialog_verify">Ověřit</string>
@@ -2298,6 +2348,12 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.
   <string name="ChatsPreferenceFragment_last_backup_s">Poslední záloha: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">Probíhá</string>
   <string name="LocalBackupJob_creating_backup">Vytvářím zálohu…</string>
+  <string name="LocalBackupJobApi29_backups_disabled">Zálohy zakázány.</string>
+  <string name="LocalBackupJobApi29_backup_failed">Zálohování selhalo.</string>
+  <string name="LocalBackupJobApi29_your_backup_directory_has_been_deleted_or_moved">Adresář pro vaše zálohy byl smazán nebo přesunut.</string>
+  <string name="LocalBackupJobApi29_your_backup_file_is_too_large">Soubor s vaší zálohou je příliš velký pro uložení na tento disk.</string>
+  <string name="LocalBackupJobApi29_there_is_not_enough_space">Není dost místa pro uložení vaší zálohy.</string>
+  <string name="LocalBackupJobApi29_backup_failed_for_an_unknown_reason">Zálohování selhalo z neznámého důvodu.</string>
   <string name="ProgressPreference_d_messages_so_far">%dzpráv zatím</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Prosím vložte ověřovací kód zaslaný %s</string>
   <string name="RegistrationActivity_wrong_number">Chybné číslo</string>
@@ -2409,5 +2465,12 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.
   <string name="GroupLinkBottomSheet_share">Sdílet</string>
   <string name="GroupLinkBottomSheet_copied_to_clipboard">Zkopírováno do schránky</string>
   <string name="GroupLinkBottomSheet_the_link_is_not_currently_active">Odkaz není v současné době aktivní</string>
+  <!--VoiceNotePlaybackPreparer-->
+  <string name="VoiceNotePlaybackPreparer__could_not_start_playback">Nepodařilo se zahájit přehrávání. </string>
+  <!--VoiceNoteMediaDescriptionCompatFactory-->
+  <string name="VoiceNoteMediaDescriptionCompatFactory__voice_message">Hlasová zpráva · %1$s</string>
+  <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s pro %2$s</string>
+  <!--StorageUtil-->
+  <string name="StorageUtil__s_s">%1$s/%2$s</string>
   <!--EOF-->
 </resources>
