--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -322,6 +322,21 @@
   <string name="CreateProfileActivity_profile_photo">প্রোফাইলের ছবি</string>
   <string name="CreateProfileActivity_set_up_your_profile">আপনার প্রোফাইল সেট করুন</string>
   <string name="CreateProfileActivity_set_avatar_description">প্রোফাইলের ছবি সেট করুন</string>
+  <!--ChooseBackupFragment-->
+  <string name="ChooseBackupFragment__restore_from_backup">ব্যাকঅাপ থেকে পুনঃস্থাপন?</string>
+  <string name="ChooseBackupFragment__restore_your_messages_and_media">স্থানীয় ব্যাকঅাপ থেকে আপনার বার্তা এবং মিডিয়া পুনরুদ্ধার করুন। আপনি যদি এখনই পুনরুদ্ধার না করেন তবে আপনি পরে আর পুনরুদ্ধার করতে পারবেন না।</string>
+  <string name="ChooseBackupFragment__learn_more">আরও জানুন</string>
+  <!--RestoreBackupFragment-->
+  <string name="RestoreBackupFragment__choose_folder">ফোল্ডার চয়ন করুন</string>
+  <string name="RestoreBackupFragment__not_now">এখন না</string>
+  <!--BackupsPreferenceFragment-->
+  <string name="BackupsPreferenceFragment__chat_backups">চ্যাট ব্যাকআপসমূহ</string>
+  <string name="BackupsPreferenceFragment__create_backup">ব্যাকঅাপ নির্মাণ করুন</string>
+  <string name="BackupsPreferenceFragment__verify_backup_passphrase">ব্যাকআপ পাসফ্রেজ যাচাই করুন</string>
+  <string name="BackupsPreferenceFragment__turn_on">চালু করুন</string>
+  <string name="BackupsPreferenceFragment__turn_off">বন্ধ করুন</string>
+  <string name="BackupsPreferenceFragment__learn_more">আরও জানুন</string>
+  <string name="BackupsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">ব্যাকআপগুলি তৈরি করতে Signal এর জন্য বাহ্যিক স্টোরেজ অনুমতি প্রয়োজন, তবে এটি স্থায়ীভাবে অস্বীকার করা হয়েছে। দয়া করে অ্যাপ্লিকেশন সেটিংস যান, \"অনুমতিগুলি\" নির্বাচন করুন এবং \"স্টোরেজ\" সক্ষম করুন।</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">প্রথা ব্যবহৃত : %s</string>
   <string name="CustomDefaultPreference_using_default">ডিফল্ট ব্যবহৃত: %s</string>
@@ -361,6 +376,8 @@
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">এই ডিভাইস প্লে সার্ভিস সমর্থন করে না। সিস্টেম ব্যাটারি অপ্টিমাইজেশন অক্ষম করতে আলতো চাপুন, যা নিষ্ক্রিয় অবস্থায় বার্তা পুনরুদ্ধার থেকে Signal -কে বাধা দেয়।</string>
   <!--ExpiredBuildReminder-->
   <string name="ExpiredBuildReminder_update_now">আপডেট করুন</string>
+  <!--PendingGroupJoinRequestsReminder-->
+  <string name="PendingGroupJoinRequestsReminder_view">দেখান</string>
   <!--ShareActivity-->
   <string name="ShareActivity_share_with">এর সাথে শেয়ার করুন</string>
   <string name="ShareActivity_multiple_attachments_are_only_supported">একাধিক সংযুক্তি সমূহ শুধু ছবি ও ভিডিওর ক্ষেত্রে সম্ভব</string>
@@ -631,13 +648,8 @@
   <string name="MessageRecord_message_encrypted_with_a_legacy_protocol_version_that_is_no_longer_supported">Signal এর একটি পুরানো সংস্করণ ব্যবহার করে এনক্রিপ্ট করা একটি বার্তা পেয়েছেন যা আর সমর্থিত নয়। দয়া করে প্রেরককে অতি সাম্প্রতিক সংস্করণে আপডেট করতে এবং বার্তাটি পুনরায় পাঠাতে বলুন।</string>
   <string name="MessageRecord_left_group">আপনি গ্রুপ ত্যাগ করেছেন।</string>
   <string name="MessageRecord_you_updated_group">আপনি গ্রুপ আপডেট করেছেন।</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_you_called">আপনি কল করেছিলেন</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_called_you">পরিচিতি কল করেছিল</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call">মিসড কল</string> -->
   <string name="MessageRecord_s_updated_group">%s গ্রুপ আপডেট করেছে।</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_s_called_you">%s আপনাকে কল করেছিলো</string> -->
   <string name="MessageRecord_called_s">%s কল করেছেন</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_from">%s এর থেকে ব্যর্থ কল</string> -->
   <string name="MessageRecord_s_joined_signal">%s Signal এ যোগ দিয়েছেন!</string>
   <string name="MessageRecord_you_disabled_disappearing_messages">আপনি অদৃশ্য হয়ে যাওয়া বার্তাগুলি অক্ষম করেছেন।</string>
   <string name="MessageRecord_s_disabled_disappearing_messages">%1$s অদৃশ্য হয়ে যাওয়া বার্তা অক্ষম করেছেন।</string>
@@ -717,6 +729,7 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">আপনি অন্য একটি ডিভাইস থেকে  %s এর নিরাপত্তা নাম্বার অযাচিত নির্বাচন করেছেন</string>
   <!--MessageRequestBottomView-->
   <string name="MessageRequestBottomView_accept">মানছি</string>
+  <string name="MessageRequestBottomView_continue">চলতে থাকুন</string>
   <string name="MessageRequestBottomView_delete">মুছে দিন</string>
   <string name="MessageRequestBottomView_block">অবরূদ্ধ</string>
   <string name="MessageRequestBottomView_unblock">মূক্ত করুন</string>
@@ -1189,8 +1202,6 @@
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">পরিচিতি পুনরুদ্ধারে ত্রুটি, আপনার নেটওয়ার্ক সংযোগটি পরীক্ষা করুন</string>
   <string name="ContactSelectionListFragment_username_not_found">ব্যবহারকারীর নাম খুঁজে পাওয়া যায়নি</string>
   <string name="ContactSelectionListFragment_s_is_not_a_signal_user">\"%1$s\" কোনও Signal ব্যবহারকারী নয়। দয়া করে ব্যবহারকারীর নামটি পরীক্ষা করুন এবং আবার চেষ্টা করুন।</string>
-  <!-- Removed by excludeNonTranslatables <string name="ContactSelectionListFragment_okay">ঠিক আছে</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ContactSelectionListFragment_the_group_is_full">গ্রুপটি পরিপূর্ণ</string> -->
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">কোনও অবরুদ্ধ পরিচিতি নেই</string>
   <!--contact_selection_list_fragment-->
@@ -1839,6 +1850,7 @@
   <string name="BackupDialog_delete_backups">ব্যাকআপ মুছে দিন?</string>
   <string name="BackupDialog_disable_and_delete_all_local_backups">সমস্ত স্থানীয় ব্যাকআপ নিস্ক্রীয় করবেন এবং মুছবেন?</string>
   <string name="BackupDialog_delete_backups_statement">ব্যাকআপ মুছে দিন</string>
+  <string name="BackupDialog_choose_folder">ফোল্ডার চয়ন করুন</string>
   <string name="BackupDialog_copied_to_clipboard">ক্লিপবোর্ডে অনুলিপি করা হয়েছে</string>
   <string name="BackupDialog_enter_backup_passphrase_to_verify">যাচাই করতে আপনার ব্যাকআপ পাসফ্রেজটি প্রবেশ করান</string>
   <string name="BackupDialog_verify">যাচাই করুন</string>
@@ -1931,5 +1943,9 @@
   <string name="GroupLinkBottomSheet_copy">অনুলিপি</string>
   <string name="GroupLinkBottomSheet_share">শেয়ার করুন</string>
   <string name="GroupLinkBottomSheet_copied_to_clipboard">ক্লিপবোর্ডে অনুলিপি করা হয়েছে</string>
+  <!--VoiceNotePlaybackPreparer-->
+  <!--VoiceNoteMediaDescriptionCompatFactory-->
+  <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s থেকে %2$s</string>
+  <!--StorageUtil-->
   <!--EOF-->
 </resources>
