--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -308,6 +308,22 @@
   <string name="CreateProfileActivity_profile_photo">Foto profil</string>
   <string name="CreateProfileActivity_set_up_your_profile">Siapkan profil Anda</string>
   <string name="CreateProfileActivity_set_avatar_description">Pilih avatar</string>
+  <!--ChooseBackupFragment-->
+  <string name="ChooseBackupFragment__restore_from_backup">Pulihkan dari cadangan?</string>
+  <string name="ChooseBackupFragment__restore_your_messages_and_media">Memulihkan pesan dan media Anda dari cadangan lokal. Jika tidak dipulihkan sekarang, Anda tidak akan bisa memulihkannya nanti.</string>
+  <string name="ChooseBackupFragment__learn_more">Pelajari lebih lanjut</string>
+  <!--RestoreBackupFragment-->
+  <string name="RestoreBackupFragment__choose_folder">Pilih map</string>
+  <string name="RestoreBackupFragment__not_now">Nanti saja</string>
+  <!--BackupsPreferenceFragment-->
+  <string name="BackupsPreferenceFragment__chat_backups">Cadangan obrolan</string>
+  <string name="BackupsPreferenceFragment__create_backup">Buat cadangan</string>
+  <string name="BackupsPreferenceFragment__verify_backup_passphrase">Verifikasi frasa sandi cadangan</string>
+  <string name="BackupsPreferenceFragment__test_your_backup_passphrase">Uji frasa sandi cadangan Anda dan verifikasi kecocokannya</string>
+  <string name="BackupsPreferenceFragment__turn_on">Nyalakan</string>
+  <string name="BackupsPreferenceFragment__turn_off">Matikan</string>
+  <string name="BackupsPreferenceFragment__learn_more">Pelajari lebih lanjut</string>
+  <string name="BackupsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal memerlukan izin penyimpanan eksternal untuk membuat cadangan, tetapi saat ini izin ditolak secara permanen. Harap lanjutkan ke menu pengaturan aplikasi, pilih \"Izin\", dan aktifkan \"Penyimpanan\".</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Gunakan pilihan khusus: %s</string>
   <string name="CustomDefaultPreference_using_default">Gunakan pilihan standar: %s</string>
@@ -346,6 +362,8 @@
   <string name="DozeReminder_optimize_for_missing_play_services">Optimalkan untuk mengabaikan Play Services</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Perangkat ini tidak mendukung Play Services. Ketuk untuk menonaktifkan pengoptimalan baterai sistem yang mencegah Signal untuk mengambil pesan saat tidak aktif.</string>
   <!--ExpiredBuildReminder-->
+  <!--PendingGroupJoinRequestsReminder-->
+  <string name="PendingGroupJoinRequestsReminder_view">Lihat</string>
   <!--ShareActivity-->
   <string name="ShareActivity_share_with">Berbagi dengan</string>
   <string name="ShareActivity_multiple_attachments_are_only_supported">Lampiran jamak hanya berupa gambar dan video</string>
@@ -590,13 +608,8 @@
   <string name="MessageRecord_message_encrypted_with_a_legacy_protocol_version_that_is_no_longer_supported">Menerima pesan terenkripsi yang menggunakan Signal versi lama tidak lagi didukung, Mohon meminta pengirim untuk memperbarui ke versi terkini dan mengirim ulang pesannya.</string>
   <string name="MessageRecord_left_group">Anda telah keluar dari grup.</string>
   <string name="MessageRecord_you_updated_group">Anda memperbarui grup.</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_you_called">Anda memanggil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_called_you">Kontak memanggil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call">Panggilan tak terjawab</string> -->
   <string name="MessageRecord_s_updated_group">%s memperbarui grup.</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_s_called_you">%s memanggil Anda.</string> -->
   <string name="MessageRecord_called_s">Memanggil %s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_from">Panggilan tak terjawab dari %s</string> -->
   <string name="MessageRecord_s_joined_signal">%s ada di Signal!</string>
   <string name="MessageRecord_you_disabled_disappearing_messages">Anda menonaktifkan penghilangan pesan.</string>
   <string name="MessageRecord_s_disabled_disappearing_messages">%1$s menonaktifkan penghilangan pesan.</string>
@@ -666,6 +679,7 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">Anda menandai nomor keamanan anda dengan %s tidak terverifikasi dari perangkat lain</string>
   <!--MessageRequestBottomView-->
   <string name="MessageRequestBottomView_accept">Terima</string>
+  <string name="MessageRequestBottomView_continue">Lanjut</string>
   <string name="MessageRequestBottomView_delete">Hapus</string>
   <string name="MessageRequestBottomView_block">Blokir</string>
   <string name="MessageRequestBottomView_unblock">Buka blokir</string>
@@ -1133,7 +1147,6 @@ Menerima pesan pertukaran kunci untuk versi protokol yang tidak valid.
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">Kesalahan saat mengambil kontak, periksa koneksi jaringan Anda</string>
   <string name="ContactSelectionListFragment_username_not_found">Nama pengguna tidak ditemukan</string>
   <string name="ContactSelectionListFragment_s_is_not_a_signal_user">\"%1$s\" bukan pengguna Signal. Cek kembali dan coba lagi.</string>
-  <!-- Removed by excludeNonTranslatables <string name="ContactSelectionListFragment_okay">Oke</string> -->
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">Tidak ada kontak yang diblokir</string>
   <!--contact_selection_list_fragment-->
@@ -1779,6 +1792,7 @@ Menerima pesan pertukaran kunci untuk versi protokol yang tidak valid.
   <string name="BackupDialog_delete_backups">Hapus cadangan?</string>
   <string name="BackupDialog_disable_and_delete_all_local_backups">Nonaktifkan dan hapus semua cadangan lokal?</string>
   <string name="BackupDialog_delete_backups_statement">Hapus cadangan</string>
+  <string name="BackupDialog_choose_folder">Pilih map</string>
   <string name="BackupDialog_copied_to_clipboard">Disalin ke papan klip</string>
   <string name="BackupDialog_enter_backup_passphrase_to_verify">Masukkan frasa sandi cadangan Anda untuk memverifikasi</string>
   <string name="BackupDialog_verify">Memeriksa</string>
@@ -1865,5 +1879,9 @@ Menerima pesan pertukaran kunci untuk versi protokol yang tidak valid.
   <string name="GroupLinkBottomSheet_copy">Salin</string>
   <string name="GroupLinkBottomSheet_share">Bagikan</string>
   <string name="GroupLinkBottomSheet_copied_to_clipboard">Disalin ke papan klip</string>
+  <!--VoiceNotePlaybackPreparer-->
+  <!--VoiceNoteMediaDescriptionCompatFactory-->
+  <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s hingga %2$s</string>
+  <!--StorageUtil-->
   <!--EOF-->
 </resources>
