--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -335,6 +335,32 @@
   <string name="CreateProfileActivity_set_up_your_profile">Imposta il tuo profilo</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Il tuo profilo è crittografato end-to-end. Il tuo profilo e le modifiche saranno visibili ai tuoi contatti quando inizi o accetti nuove conversazioni e quando ti unisci a nuovi gruppi.</string>
   <string name="CreateProfileActivity_set_avatar_description">Imposta avatar</string>
+  <!--ChooseBackupFragment-->
+  <string name="ChooseBackupFragment__restore_from_backup">Ripristinare da backup?</string>
+  <string name="ChooseBackupFragment__restore_your_messages_and_media">Ripristina i tuoi messaggi e contenuti multimediali da un backup locale. Se non ripristini ora, non sarai in grado di farlo in seguito.</string>
+  <string name="ChooseBackupFragment__icon_content_description">Icona ripristina da backup</string>
+  <string name="ChooseBackupFragment__choose_backup">Scegli backup</string>
+  <string name="ChooseBackupFragment__learn_more">Scopri di più</string>
+  <!--RestoreBackupFragment-->
+  <string name="RestoreBackupFragment__restore_complete">Ripristino completato</string>
+  <string name="RestoreBackupFragment__to_continue_using_backups_please_choose_a_folder">Per continuare a utilizzare i backup, scegli una cartella. I nuovi backup verranno salvati in questa posizione.</string>
+  <string name="RestoreBackupFragment__choose_folder">Scegli la cartella</string>
+  <string name="RestoreBackupFragment__not_now">Non ora</string>
+  <!--BackupsPreferenceFragment-->
+  <string name="BackupsPreferenceFragment__chat_backups">Backup delle chat</string>
+  <string name="BackupsPreferenceFragment__backups_are_encrypted_with_a_passphrase">I backup vengono crittografati con una passphrase e archiviati sul tuo dispositivo.</string>
+  <string name="BackupsPreferenceFragment__create_backup">Crea backup</string>
+  <string name="BackupsPreferenceFragment__last_backup">Ultimo backup: %1$s</string>
+  <string name="BackupsPreferenceFragment__backup_folder">Cartella dei backup</string>
+  <string name="BackupsPreferenceFragment__verify_backup_passphrase">Verifica la passphrase del backup</string>
+  <string name="BackupsPreferenceFragment__test_your_backup_passphrase">Testa la passphrase del tuo backup e verifica che corrisponda</string>
+  <string name="BackupsPreferenceFragment__turn_on">Attiva</string>
+  <string name="BackupsPreferenceFragment__turn_off">Disattiva</string>
+  <string name="BackupsPreferenceFragment__to_restore_a_backup">Per ripristinare un backup, installa una nuova copia di Signal. Apri l\'app e tocca \"Ripristina backup\", quindi individua un file di backup. %1$s</string>
+  <string name="BackupsPreferenceFragment__learn_more">Scopri di più</string>
+  <string name="BackupsPreferenceFragment__in_progress">In corso…</string>
+  <string name="BackupsPreferenceFragment__d_so_far">%1$d finora…</string>
+  <string name="BackupsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal richiede l\'autorizzazione per creare backup in memoria, ma è stata negata in modo permanente. Si prega di continuare con le impostazioni dell\'app, selezionare \"Autorizzazioni\", quindi abilitare \"Archiviazione\".</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Utilizzo personalizzato: %s</string>
   <string name="CustomDefaultPreference_using_default">Utilizzo predefinito: %s</string>
@@ -376,6 +402,12 @@
   <!--ExpiredBuildReminder-->
   <string name="ExpiredBuildReminder_this_version_of_signal_has_expired">Questa versione di Signal è scaduta. Aggiorna ora per inviare e ricevere messaggi.</string>
   <string name="ExpiredBuildReminder_update_now">Aggiorna ora</string>
+  <!--PendingGroupJoinRequestsReminder-->
+  <plurals name="PendingGroupJoinRequestsReminder_d_pending_member_requests">
+    <item quantity="one">%d richiesta di diventare membro in attesa.</item>
+    <item quantity="other">%d richieste di diventare membro in attesa.</item>
+  </plurals>
+  <string name="PendingGroupJoinRequestsReminder_view">Mostra</string>
   <!--ShareActivity-->
   <string name="ShareActivity_share_with">Condividi con</string>
   <string name="ShareActivity_multiple_attachments_are_only_supported">Gli allegati multipli sono supportati solo per immagini e video</string>
@@ -771,13 +803,11 @@
   <string name="MessageRecord_left_group">Hai lasciato il gruppo.</string>
   <string name="MessageRecord_you_updated_group">Hai aggiornato il gruppo.</string>
   <string name="MessageRecord_the_group_was_updated">Il gruppo è stato aggiornato.</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_you_called">Hai chiamato</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_called_you">Contatto chiamato</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call">Chiamata persa</string> -->
+  <string name="MessageRecord_you_called_date">Hai chiamato · %1$s</string>
+  <string name="MessageRecord_missed_call_date">Chiamata persa · %1$s</string>
   <string name="MessageRecord_s_updated_group">%s ha aggiornato il gruppo.</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_s_called_you">%s ti ha chiamato</string> -->
+  <string name="MessageRecord_s_called_you_date">%1$s ti ha chiamato · %2$s</string>
   <string name="MessageRecord_called_s">Hai chiamato %s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_from">Chiamata persa da %s</string> -->
   <string name="MessageRecord_s_joined_signal">%s è su Signal!</string>
   <string name="MessageRecord_you_disabled_disappearing_messages">Hai disabilitato i messaggi a scomparsa.</string>
   <string name="MessageRecord_s_disabled_disappearing_messages">%1$s ha disabilitato i messaggi a scomparsa.</string>
@@ -912,11 +942,14 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">Hai segnato il codice di sicurezza con %s come non verificato da un altro dispositivo</string>
   <!--MessageRequestBottomView-->
   <string name="MessageRequestBottomView_accept">Accetta</string>
+  <string name="MessageRequestBottomView_continue">Continua</string>
   <string name="MessageRequestBottomView_delete">Elimina</string>
   <string name="MessageRequestBottomView_block">Blocca</string>
   <string name="MessageRequestBottomView_unblock">Sblocca</string>
   <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_they_wont_know_youve_seen_their_messages_until_you_accept">Permettere a %1$s di inviarti messaggi e condividere il tuo nome e la tua foto con loro? Non sapranno che hai visto i loro messaggi finché non accetti.</string>
   <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_wont_receive_any_messages_until_you_unblock_them">Permettere a %1$s di inviarti messaggi e condividere il tuo nome e la tua foto con loro? Non riceverai alcun messaggio finché non li sbloccherai.</string>
+  <string name="MessageRequestBottomView_continue_your_conversation_with_this_group_and_share_your_name_and_photo">Continuare la tua conversazione con questo gruppo e condividere il tuo nome e la tua foto con i suoi membri?</string>
+  <string name="MessageRequestBottomView_continue_your_conversation_with_s_and_share_your_name_and_photo">Continuare la tua conversazione con %1$s e condividere il tuo nome e la tua foto con loro?</string>
   <string name="MessageRequestBottomView_do_you_want_to_join_this_group_they_wont_know_youve_seen_their_messages_until_you_accept">Unirsi a questo gruppo e condividere il tuo nome e la tua foto con i suoi membri? Non sapranno che hai visto i loro messaggi finché non accetti.</string>
   <string name="MessageRequestBottomView_join_this_group_they_wont_know_youve_seen_their_messages_until_you_accept">Vuoi unirti a questo gruppo? Non sapranno che hai visto i loro messaggi finché non accetti.</string>
   <string name="MessageRequestBottomView_unblock_this_group_and_share_your_name_and_photo_with_its_members">Sbloccare questo gruppo e condividere il tuo nome e la tua foto con i suoi membri? Non riceverai alcun messaggio finché non li sbloccherai.</string>
@@ -1082,6 +1115,7 @@
   <string name="RegistrationActivity_more_information">Maggiori informazioni</string>
   <string name="RegistrationActivity_less_information">Meno informazioni</string>
   <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">Signal richiede l\'accesso ai tuoi contatti e ai tuoi contenuti multimediali per connetterti con gli amici, scambiare messaggi e fare chiamate sicure</string>
+  <string name="RegistrationActivity_signal_needs_access_to_your_contacts_in_order_to_connect_with_friends">Signal richiede l\'accesso ai tuoi contatti per connetterti con gli amici, scambiare messaggi e fare chiamate sicure</string>
   <string name="RegistrationActivity_rate_limited_to_service">Hai fatto troppi tentativi per registrare questo numero. Per favore riprova più tardi.</string>
   <string name="RegistrationActivity_unable_to_connect_to_service">Impossibile connettersi al servizio. Per favore controlla la connessione a internet e riprova</string>
   <string name="RegistrationActivity_to_easily_verify_your_phone_number_signal_can_automatically_detect_your_verification_code">Per verificare facilmente il tuo numero di telefono, Signal può rilevare automaticamente il codice di verifica se consenti a Signal di visualizzare i messaggi SMS.</string>
@@ -1261,6 +1295,7 @@
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Negli appunti non c\'è un codice di sicurezza da confrontare</string>
   <string name="VerifyIdentityActivity_signal_needs_the_camera_permission_in_order_to_scan_a_qr_code_but_it_has_been_permanently_denied">Signal richiede l\'autorizzazione all\'uso della fotocamera per leggere codici QR, ma questa è stata negata in modo permanente. Si prega di aprire il menu delle impostazioni dell\'app, selezionare \"Autorizzazioni\" e abilitare \"Fotocamera\".</string>
   <string name="VerifyIdentityActivity_unable_to_scan_qr_code_without_camera_permission">Impossibile scannerizzare i codici QR senza il permesso all\'uso della fotocamera</string>
+  <string name="VerifyIdentityActivity_you_must_first_exchange_messages_in_order_to_view">È necessario prima scambiarsi messaggi per poter visualizzare il numero di sicurezza di %1$s.</string>
   <!--ViewOnceMessageActivity-->
   <!--AudioView-->
   <!--MessageDisplayHelper-->
@@ -1333,6 +1368,7 @@
   <string name="NotificationChannel_other">Altro</string>
   <string name="NotificationChannel_group_messages">Messaggi</string>
   <string name="NotificationChannel_missing_display_name">Sconosciuto</string>
+  <string name="NotificationChannel_voice_notes">Note vocali</string>
   <!--ProfileEditNameFragment-->
   <string name="ProfileEditNameFragment_successfully_set_profile_name">Nome profilo impostato con successo.</string>
   <string name="ProfileEditNameFragment_encountered_a_network_error">Si è verificato un errore di rete.</string>
@@ -1433,9 +1469,15 @@
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">Errore di rilevamento dei contatti, controlla la connessione di rete</string>
   <string name="ContactSelectionListFragment_username_not_found">Nome utente non trovato</string>
   <string name="ContactSelectionListFragment_s_is_not_a_signal_user">\"%1$s\" non è un utente Signal. Controlla il nome utente e riprova.</string>
-  <!-- Removed by excludeNonTranslatables <string name="ContactSelectionListFragment_okay">Ok</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ContactSelectionListFragment_the_group_is_full">Il gruppo è pieno</string> -->
   <string name="ContactSelectionListFragment_you_do_not_need_to_add_yourself_to_the_group">Non è necessario aggiungere te stesso al gruppo</string>
+  <string name="ContactSelectionListFragment_maximum_group_size_reached">Dimensione massima del gruppo raggiunta</string>
+  <string name="ContactSelectionListFragment_signal_groups_can_have_a_maximum_of_d_members">I gruppi di Signal possono avere un massimo di %1$d membri.</string>
+  <string name="ContactSelectionListFragment_recommended_member_limit_reached">Limite di membri consigliato raggiunto</string>
+  <string name="ContactSelectionListFragment_signal_groups_perform_best_with_d_members_or_fewer">I gruppi di Signal funzionano meglio con %1$d membri o meno. Aggiungere più membri causerà ritardi nell\'invio e nella ricezione dei messaggi.</string>
+  <plurals name="ContactSelectionListFragment_d_members">
+    <item quantity="one">%1$d membro</item>
+    <item quantity="other">%1$d membri</item>
+  </plurals>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">Nessun contatto bloccato</string>
   <!--contact_selection_list_fragment-->
@@ -2123,7 +2165,7 @@
   <string name="ResearchMegaphoneDialog_we_believe_in_privacy"><![CDATA[<p><b>Crediamo nella privacy.</b></p><p>Signal non ti traccia né raccoglie i tuoi dati. Per migliorare Signal per tutti, ci affidiamo al feedback degli utenti, <b>e ci piacerebbe molto il tuo.</b></p><p>Stiamo conducendo un sondaggio per capire come utilizzi Signal. Il nostro sondaggio non raccoglie dati che ti identificano. Se sei interessato a condividere feedback aggiuntivi, avrai la possibilità di fornire le informazioni di contatto.</p><p>Se hai qualche minuto e feedback da offrire, ci piacerebbe sentirti.</p>]]></string>
   <string name="ResearchMegaphoneDialog_take_the_survey">Partecipa al sondaggio</string>
   <string name="ResearchMegaphoneDialog_no_thanks">No grazie</string>
-  <!-- Removed by excludeNonTranslatables <string name="ResearchMegaphoneDialog_the_survey_is_hosted_by_surveygizmo_at_the_secure_domain">Il sondaggio è ospitato da Surveygizmo presso il dominio sicuro surveys.signalusers.org</string> -->
+  <string name="ResearchMegaphoneDialog_the_survey_is_hosted_by_alchemer_at_the_secure_domain">Il sondaggio è ospitato da Alchemer presso il dominio sicuro surveys.signalusers.org</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Icona trasporto</string>
   <string name="ConversationListFragment_loading">Caricamento…</string>
@@ -2139,6 +2181,8 @@
   <string name="PushDecryptJob_unlock_to_view_pending_messages">Sblocca per leggere i messaggi in sospeso</string>
   <string name="enter_backup_passphrase_dialog__backup_passphrase">Passphrase di backup</string>
   <string name="backup_enable_dialog__backups_will_be_saved_to_external_storage_and_encrypted_with_the_passphrase_below_you_must_have_this_passphrase_in_order_to_restore_a_backup">I backup verranno salvati nella memoria esterna e crittografati con la passphrase qui sotto. Sarà necessario avere questa passphrase per ripristinare il backup.</string>
+  <string name="backup_enable_dialog__you_must_have_this_passphrase">È necessario avere questa passphrase per ripristinare un backup.</string>
+  <string name="backup_enable_dialog__folder">Cartella</string>
   <string name="backup_enable_dialog__i_have_written_down_this_passphrase">Ho scritto questa passphrase. Senza di questa, non sarò in grado di ripristinare un backup.</string>
   <string name="registration_activity__restore_backup">Ripristina backup</string>
   <string name="registration_activity__skip">Salta</string>
@@ -2164,6 +2208,8 @@
   <string name="BackupDialog_delete_backups">Cancellare i backup?</string>
   <string name="BackupDialog_disable_and_delete_all_local_backups">Disabilitare e cancellare tutti i backup locali?</string>
   <string name="BackupDialog_delete_backups_statement">Cancellare i backup</string>
+  <string name="BackupDialog_to_enable_backups_choose_a_folder">Per attivare i backup, scegli una cartella. I nuovi backup verranno salvati in questa posizione.</string>
+  <string name="BackupDialog_choose_folder">Scegli la cartella</string>
   <string name="BackupDialog_copied_to_clipboard">Aggiunto agli appunti</string>
   <string name="BackupDialog_enter_backup_passphrase_to_verify">Inserisci la passphrase del tuo backup per verificarla</string>
   <string name="BackupDialog_verify">Verifica</string>
@@ -2173,6 +2219,12 @@
   <string name="ChatsPreferenceFragment_last_backup_s">Ultimo backup: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">In corso</string>
   <string name="LocalBackupJob_creating_backup">Creazione backup…</string>
+  <string name="LocalBackupJobApi29_backups_disabled">Backup disattivati.</string>
+  <string name="LocalBackupJobApi29_backup_failed">Backup fallito.</string>
+  <string name="LocalBackupJobApi29_your_backup_directory_has_been_deleted_or_moved">La cartella di backup è stata eliminata o spostata.</string>
+  <string name="LocalBackupJobApi29_your_backup_file_is_too_large">Il tuo file di backup è troppo grande per essere memorizzato su questo volume.</string>
+  <string name="LocalBackupJobApi29_there_is_not_enough_space">Spazio insufficiente per memorizzare il backup.</string>
+  <string name="LocalBackupJobApi29_backup_failed_for_an_unknown_reason">Backup fallito per un motivo sconosciuto.</string>
   <string name="ProgressPreference_d_messages_so_far">Ancora %d messaggi</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Per favore inserire il codice di verifica inviato a %s.</string>
   <string name="RegistrationActivity_wrong_number">Numero errato</string>
@@ -2284,5 +2336,12 @@
   <string name="GroupLinkBottomSheet_share">Condividi</string>
   <string name="GroupLinkBottomSheet_copied_to_clipboard">Copiato negli appunti</string>
   <string name="GroupLinkBottomSheet_the_link_is_not_currently_active">Il link non è al momento attivo</string>
+  <!--VoiceNotePlaybackPreparer-->
+  <string name="VoiceNotePlaybackPreparer__could_not_start_playback">Impossibile avviare la riproduzione.</string>
+  <!--VoiceNoteMediaDescriptionCompatFactory-->
+  <string name="VoiceNoteMediaDescriptionCompatFactory__voice_message">Messaggio vocale · %1$s</string>
+  <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s a %2$s</string>
+  <!--StorageUtil-->
+  <string name="StorageUtil__s_s">%1$s/%2$s</string>
   <!--EOF-->
 </resources>
