--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -321,6 +321,29 @@
   <string name="CreateProfileActivity_set_up_your_profile">设置个人资料</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">您的个人资料已通过端对端加密。当您发起、接受新对话以及加入新新群组时，相关用户将能看到您的个人资料及更新。</string>
   <string name="CreateProfileActivity_set_avatar_description">设置头像</string>
+  <!--ChooseBackupFragment-->
+  <string name="ChooseBackupFragment__restore_from_backup">是否从备份进行恢复？</string>
+  <string name="ChooseBackupFragment__restore_your_messages_and_media">从本地备份恢复你的消息和媒体。如果现在不进行备份，以后将无法恢复。</string>
+  <string name="ChooseBackupFragment__icon_content_description">通过备份图标进行恢复</string>
+  <string name="ChooseBackupFragment__choose_backup">选择备份</string>
+  <string name="ChooseBackupFragment__learn_more">了解更多</string>
+  <!--RestoreBackupFragment-->
+  <string name="RestoreBackupFragment__restore_complete">恢复完成</string>
+  <string name="RestoreBackupFragment__to_continue_using_backups_please_choose_a_folder">请选择文件以进行备份，新的备份将保存到该位置。</string>
+  <string name="RestoreBackupFragment__choose_folder">选择文件夹</string>
+  <string name="RestoreBackupFragment__not_now">稍后再说</string>
+  <!--BackupsPreferenceFragment-->
+  <string name="BackupsPreferenceFragment__chat_backups">聊天备份</string>
+  <string name="BackupsPreferenceFragment__backups_are_encrypted_with_a_passphrase">备份通过密码加密并保存在您的设备上。</string>
+  <string name="BackupsPreferenceFragment__create_backup">创建备份</string>
+  <string name="BackupsPreferenceFragment__last_backup">上一次备份：%1$s</string>
+  <string name="BackupsPreferenceFragment__backup_folder">备份文件夹</string>
+  <string name="BackupsPreferenceFragment__verify_backup_passphrase">验证备份密码</string>
+  <string name="BackupsPreferenceFragment__test_your_backup_passphrase">测试备份密码并验证是否匹配</string>
+  <string name="BackupsPreferenceFragment__turn_on">启用</string>
+  <string name="BackupsPreferenceFragment__turn_off">关闭</string>
+  <string name="BackupsPreferenceFragment__learn_more">了解更多</string>
+  <string name="BackupsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal 需外部存储权限，来创建备份，但该权限已永久禁用。请访问应用设置菜单，选择“权限”并启用“存储”。</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">使用定制：%s</string>
   <string name="CustomDefaultPreference_using_default">使用默认：%s</string>
@@ -362,6 +385,8 @@
   <!--ExpiredBuildReminder-->
   <string name="ExpiredBuildReminder_this_version_of_signal_has_expired">此 Signal 版本已过期，请升级到最新版本以继续收发消息。</string>
   <string name="ExpiredBuildReminder_update_now">现在升级</string>
+  <!--PendingGroupJoinRequestsReminder-->
+  <string name="PendingGroupJoinRequestsReminder_view">查看</string>
   <!--ShareActivity-->
   <string name="ShareActivity_share_with">分享至</string>
   <string name="ShareActivity_multiple_attachments_are_only_supported">多个附件只支持图像和视频</string>
@@ -737,13 +762,8 @@
   <string name="MessageRecord_left_group">您已经退出该群组。</string>
   <string name="MessageRecord_you_updated_group">您已更新该群组</string>
   <string name="MessageRecord_the_group_was_updated">群组已更新。</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_you_called">您曾呼叫</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_called_you">联系人曾呼叫</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call">未接来电</string> -->
   <string name="MessageRecord_s_updated_group">%s 已更新该群组。</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_s_called_you">%s 曾呼叫</string> -->
   <string name="MessageRecord_called_s">曾呼叫 %s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_from">%s 的未接来电</string> -->
   <string name="MessageRecord_s_joined_signal">%s 加入 Signal！</string>
   <string name="MessageRecord_you_disabled_disappearing_messages">您已禁用阅后即焚。</string>
   <string name="MessageRecord_s_disabled_disappearing_messages">%1$s 已禁用阅后即焚。</string>
@@ -873,6 +893,7 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">已在另一设备上将您与 %s 的安全码标记为未验证</string>
   <!--MessageRequestBottomView-->
   <string name="MessageRequestBottomView_accept">接受</string>
+  <string name="MessageRequestBottomView_continue">继续</string>
   <string name="MessageRequestBottomView_delete">删除</string>
   <string name="MessageRequestBottomView_block">屏蔽</string>
   <string name="MessageRequestBottomView_unblock">取消屏蔽</string>
@@ -1387,8 +1408,6 @@
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">获取联系人出错，请检查您的网络连接</string>
   <string name="ContactSelectionListFragment_username_not_found">未找到该用户名</string>
   <string name="ContactSelectionListFragment_s_is_not_a_signal_user">“%1$s”不是 Signal 用户，请检查用户名并重试。</string>
-  <!-- Removed by excludeNonTranslatables <string name="ContactSelectionListFragment_okay">好的</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ContactSelectionListFragment_the_group_is_full">此群已满</string> -->
   <string name="ContactSelectionListFragment_you_do_not_need_to_add_yourself_to_the_group">您不需要将自己添加到群组中</string>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">没有已屏蔽联系人</string>
@@ -2061,7 +2080,6 @@
   <string name="ResearchMegaphoneDialog_we_believe_in_privacy"><![CDATA[<p><b>我们尊重隐私。</b></p><p>Signal 不会跟踪或搜集您的数据。我们需要用户反馈来改进 Signal ，<b>你的宝贵意见不可或缺。</b></p><p>我们正在做一份关于您使用 Signal 的调研。此调研不会搜集任何泄漏您身份的信息。若有兴趣分享更多反馈，您可以选择性提供联系方式。</p><p>如果您能抽出几分钟完成调研，我们将翘首以待。</p>]]></string>
   <string name="ResearchMegaphoneDialog_take_the_survey">参与调研</string>
   <string name="ResearchMegaphoneDialog_no_thanks">不，谢谢。</string>
-  <!-- Removed by excludeNonTranslatables <string name="ResearchMegaphoneDialog_the_survey_is_hosted_by_surveygizmo_at_the_secure_domain">此调研由 Surveygizmo 于在安全域 surveys.signalusers.org 上运行</string> -->
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">传输图标</string>
   <string name="ConversationListFragment_loading">正在加载…</string>
@@ -2102,6 +2120,7 @@
   <string name="BackupDialog_delete_backups">删除备份？</string>
   <string name="BackupDialog_disable_and_delete_all_local_backups">禁用并删除全部本地备份？</string>
   <string name="BackupDialog_delete_backups_statement">删除备份</string>
+  <string name="BackupDialog_choose_folder">选择文件夹</string>
   <string name="BackupDialog_copied_to_clipboard">已复制到剪切板</string>
   <string name="BackupDialog_enter_backup_passphrase_to_verify">输入备份密码进行验证</string>
   <string name="BackupDialog_verify">验证</string>
@@ -2222,5 +2241,9 @@
   <string name="GroupLinkBottomSheet_share">分享</string>
   <string name="GroupLinkBottomSheet_copied_to_clipboard">已复制到剪切板</string>
   <string name="GroupLinkBottomSheet_the_link_is_not_currently_active">此链接尚未激活</string>
+  <!--VoiceNotePlaybackPreparer-->
+  <!--VoiceNoteMediaDescriptionCompatFactory-->
+  <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s 至 %2$s</string>
+  <!--StorageUtil-->
   <!--EOF-->
 </resources>
